--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 	<meta name="viewport" content="width=device-width">
 
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="_css/bootstrap.min.css">
 	<style>
 	body {
 	  padding-top: 60px;
 	  padding-bottom: 40px;
 	}
 	</style>
-	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="_css/bootstrap-responsive.min.css">
+	<link rel="stylesheet" href="_css/screen.css">
 
-	<script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
+	<script src="_js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
@@ -82,10 +82,10 @@
 
     </div> <!-- /container -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="_js/libs/jquery-1.7.2.min.js"><\/script>')</script>
 
-<script src="js/libs/bootstrap/bootstrap.min.js"></script>
+<script src="_js/libs/bootstrap/bootstrap.min.js"></script>
 
-<script src="js/script.js"></script>
+<script src="_js/script.js"></script>
 </body>
 </html>
