--- a/index.html
+++ b/index.html
@@ -51,66 +51,26 @@
     </div>
 
     <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <!-- <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-      </div> -->
-
-      <!-- Example row of columns -->
-      <!-- <div class="row">
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr> -->
-      <!-- <header>
-        <h1>Scale it!</h1>
-        <ul id="selectDimension">
-          <li><a href="#">Diameter</a></li>
-          <li>Length</li>
-          <li>Width</li>
-          <li>Height</li>
-          <li>Area</li>
-          <li>Volume</li>
-        </ul>
-      </header> -->
-
       <div class="row">
-        <div class="span12">
-          <div id ="leftList">
+        <div id="chooseObjects" class="span12">
+          <div class ="left">
             <div id="list1" class="listContainer">
-              <dl>
-                <dt>Teacher Objects</dt>
-                <dd id="dd1">Earth</dd>
-                <dd id="dd2">Soccer</dd>
-                <dd id="dd3">Earth</dd>
-                <dd id="dd4">Soccer</dd>
-                <dd id="dd5">Earth</dd>
-                <dd id="dd6">Soccer</dd>
-                <dd id="dd7">Earth</dd>
-                <dd id="dd8">Soccer</dd>
-                <dd id="dd9">Earth</dd>
-                <dd id="dd10">Soccer</dd>
-                <dd id="dd11">Earth</dd>
-                <dd id="dd12">Soccer</dd>
-                <dd id="dd13">Earth</dd>
-                <dd id="dd14">Soccer</dd>
+              <!-- <dl> -->
+                <!-- <dt>Teacher Objects</dt>
+                <dd id="dd1">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd2">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd3">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd4">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd5">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd6">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd7">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd8">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd9">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd10">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd11">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd12">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd13">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd14">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
               </dl>
               <dl>
                 <dt>Michael Objects</dt>
@@ -125,29 +85,29 @@
                 <dd id="dd23">Baseball</dd>
                 <dd id="dd24">Laptop</dd>
                 <dd id="dd25">Baseball</dd>
-                <dd id="dd26">Laptop</dd>
-              </dl>
+                <dd id="dd26">Laptop</dd> -->
+              <!-- </dl> -->
             </div>
           </div>
 
-          <div id="rightList">
+          <div class="right">
             <div id="list2" class="listContainer">
-              <dl>
+              <!-- <dl>
                 <dt>Teacher Objects</dt>
-                <dd id="dd27">Earth</dd>
-                <dd id="dd28">Soccer</dd>
-                <dd id="dd29">Earth</dd>
-                <dd id="dd30">Soccer</dd>
-                <dd id="dd31">Earth</dd>
-                <dd id="dd32">Soccer</dd>
-                <dd id="dd33">Earth</dd>
-                <dd id="dd34">Soccer</dd>
-                <dd id="dd35">Earth</dd>
-                <dd id="dd36">Soccer</dd>
-                <dd id="dd37">Earth</dd>
-                <dd id="dd38">Soccer</dd>
-                <dd id="dd39">Earth</dd>
-                <dd id="dd40">Soccer</dd>
+                <dd id="dd27">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd28">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd29">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd30">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd31">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd32">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd33">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd34">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd35">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd36">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd37">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd38">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
+                <dd id="dd39">Earth <img class="earth" src="_img/objects/Earth_Sphere.png" /></dd>
+                <dd id="dd40">Soccer <img class="soccer" src="_img/objects/soccer.png" /></dd>
               </dl>
               <dl>
                 <dt>Michael Objects</dt>
@@ -163,13 +123,16 @@
                 <dd id="dd50">Laptop</dd>
                 <dd id="dd51">Baseball</dd>
                 <dd id="dd52">Laptop</dd>
-              </dl>
+              </dl> -->
             </div>
           </div>
-
-          <!-- <img id="earth" src="_img/objects/Earth_Sphere.png" />
-          <img id="soccer" src="_img/objects/soccer.jpg" /> -->
-          <!-- <p>Main Content</p> -->
+        </div>
+        <div id="animateObjects" class="span12">
+          <div id="description"><p id="verboseDescription"></p></div>
+          <div id="leftObject" class="left">
+          </div>
+          <div id="rightObject" class="right">
+          </div>
         </div>
       </div>
       <footer>
