--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <a class="brand" href="#">Scale It!</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li class="active"><a href="#diameter">Diameter</a></li>
-            <li><a href="#length">Length</a></li>
-            <li><a href="#width">Width</a></li>
-            <li><a href="#height">Height</a></li>
-            <li><a href="#area">Area</a></li>
-            <li><a href="#volume">Volume</a></li>
+            <li class="dimensionSelector" id="diameter"><a href="#diameter">Diameter</a></li>
+            <li class="dimensionSelector" id="length"><a href="#length">Length</a></li>
+            <li class="dimensionSelector" id="width"><a href="#width">Width</a></li>
+            <li class="dimensionSelector" id="height"><a href="#height">Height</a></li>
+            <li class="dimensionSelector" id="area"><a href="#area">Area</a></li>
+            <li class="dimensionSelector" id="volume"><a href="#volume">Volume</a></li>
           </ul>
         </div> <!--/.nav-collapse -->
       </div> <!-- /.container -->
@@ -65,14 +65,14 @@
       </div>
       <div id="animateObjects" class="span12">
         <div id="description"><p id="verboseDescription"></p></div>
-        <div id="leftObject" class="left">
+        <div id="leftObject" class="objectAnimation left">
         </div>
-        <div id="rightObject" class="right">
+        <div id="rightObject" class="objectAnimation right">
         </div>
       </div>
     </div>
     <footer>
-      <p>&copy; Company 2012</p>
+      <!-- <p>&copy; Company 2012</p> -->
     </footer>
 
   </div> <!-- /container -->
