added message toggling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="container">
     <div class="row">
-      <div id="chooseObjects" class="span12">
+      <div id="chooseObjects" class="span10">
         <div class ="left">
           <div id="list1" class="listContainer">
           </div>
@@ -63,11 +63,16 @@
           </div>
         </div>
       </div>
-      <div id="animateObjects" class="span12">
-        <div id="description"><p id="verboseDescription"></p></div>
-        <div id="leftObject" class="objectAnimation left">
+      <div id="animateObjects" class="span10">
+        <div>
+          <div id="leftObject" class="objectAnimation left">
+          </div>
+          <div id="rightObject" class="objectAnimation right">
+          </div>
         </div>
-        <div id="rightObject" class="objectAnimation right">
+        <div id="description">
+          <img id="reverseDescription" width="50" src="_img/arrows-double-reversed.svg" />
+          <p id="verboseDescription"></p>
         </div>
       </div>
     </div>
