Added predict/analogy basic capabilities

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <span class="icon-bar"></span>
         </a>
         <a class="brand" href="#">Scale It!</a>
-        <div class="nav-collapse">
+        <!-- <div class="nav-collapse">
           <ul class="nav">
             <li class="dimensionSelector" id="diameter"><a href="#diameter">Diameter</a></li>
             <li class="dimensionSelector" id="length"><a href="#length">Length</a></li>
@@ -45,7 +45,7 @@
             <li class="dimensionSelector" id="area"><a href="#area">Area</a></li>
             <li class="dimensionSelector" id="volume"><a href="#volume">Volume</a></li>
           </ul>
-        </div> <!--/.nav-collapse -->
+        </div> /.nav-collapse -->
       </div> <!-- /.container -->
     </div> <!-- /.navbar-inner -->
   </div> <!-- /.navbar-fixed-top -->
