Revert "Merge branch 'backbone' of github.com:VT-CHCI/Astronomical-Proportions"
This reverts commit e8b842e8d763b0474566a5390323376a6bc8f8f6, reversing
changes made to 6394fd50f732238d9abe7aa0d1532bd4b15041a5.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@ s<!doctype html>
 	<script src="_js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
 </head>
 <body>
-  <script type="text/javascript" src="_js/libs/underscore-min.js"></script>
-  <script type="text/javascript" src="_js/libs/backbone-min.js"></script>
-
-
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
@@ -92,7 +88,6 @@ s<!doctype html>
   <script src="_js/libs/bootstrap/bootstrap.min.js"></script>
   <script src="_js/libs/jquery.ioslist-1.0.1.min.js"></script>
 
-  <script data-main="app/assets/javascripts/main.js" src="_js/lib/require.js"></script>
-  <script src="js/main.js"></script>
+  <script src="_js/script.js"></script>
 </body>
 </html>
